ChangeLog
20080831 - [dj] * Corrected more, and minimized dependencies in scripts.
                * Don't try to write to bootlog in 0 and 6.
                * Use /etc/rcS.d instead of /etc/rcsysinit.d - added
                  replacement /etc/inittab file

20080830 - [dj] * Corrected remaining dependency errors in script headers.

20080531 - [dj] * Synced with LFS-Bootscrpts-20080531 (use udevadm)
                * Added additional functions to manage_functions script.

20080413 - [dj] * Added manage_functions script for use by scripts such as
                  {install,remove}_initd or chkconfig, that need to parse the
                  LSB headers.
                * Cleaned up script headers to reflect real Start or Stop

20080315 - [dj] * Corrected test for $pidfile in pidofproc()
                * Replaced exit with return in statusproc() - (lfs-functions)

20080315 - [dj] * Added missing 'stale pid file' checking for pidofproc()

20080210 - [dj] * Updated documentation

20070820 - [dj] * Synced with LFS-bootscripts

20070705 - [dj] * Synced with LFS-bootscripts
                * Removed 'stty' from the environment setup as it breaks 
                  custom key configs when run from the CLI.

20070218 - [dj] * Synced with LFS-bootscripts.

20070206 - [dj] * Initial commit