@@ -4,7 +4,12 @@ The scripts contianed in this directory are a complete rewrite of the
 boot scripts from LFS-6.1 (updated for LFS-SVN about 2008-05-31).  As is
 usually the case with a rewrite, there have been many changes:
 
-LSB Version 3.1 Compliant Scripts - Immediately noticable are the LSB headers
+AS OF 20080907, THESE SCRIPTS REQUIRE THE NEW initd-tools PACKAGE.
+Dan Nicholson has recently released an initd-tools package that contain 
+LSB compliant install_initd and remove_initd programs written in C.
+See the INSTALL file for installation instructions.
+
+LSB Version 3.2 Compliant Scripts - Immediately noticable are the LSB headers
 in the rc.d scripts themselves.  Each script contains a usable header to
 allow for automating both the installation of, and determining proper
 execution order for the startup scripts.  These values can also be used
@@ -14,23 +19,6 @@ they can be used in parallel setups.  I am not sure if this was the only
 barrier to auto language translation in the previous bootscripts.  Further,
 the messages are created from parts and only written to the screen in a
 single command, so maybe no help at all WRT translated boot messages.
-
-LSB 3.1 Omissions - Unfortunately, this package is not completely LSB
-compliant as it lacks install_initd and remove_initd programs.  The current
-popular flavor of these programs is written in Python, which, as you should
-know, is not installed until BLFS.  I began work on a bash implementation,
-and have provided the needed functions to parse the LSB headers in the
-manage-functions script (insalled by default into /lib/lsb).  Unfortunately,
-I have yet to complete the actual install_initd and remove_initd scripts,
-and have found bash to an unsuitable language to write a complete reorder
-due to the ammount of time for recursive funtions and loops to complete.
-Dan Nicholson has began work on initd-tools, a C implementaion of
-install_initd and remove_initd.  At the time of writing (20080830) the
-programs themselves are not yet functional, however, the libraries used
-to parse the scripts and provide the dependency order are working as
-expected.  I would expect a completely standards compliant set of programs,
-written in C very soon. Dans work can be viewed via git-web at
-http://gitweb.dwcab.com/?p=initd-tools.git;a=summary .
 
 Distribution Independent - this original goal for the LFS scripts has been
 stretched even further by providing both a global rc config file that
@@ -69,7 +57,7 @@ Some distros provide a rc.d direcorty with symlinks to the rc*.d and init.d
 directories, I have not done that.  /etc is the location now, get your
 flying fingers accustomed to it!  Of course, this is still configurable in
 /etc/sysconfig/rc.site, and if the change is too great, I'll put it back.
-I've also removed the rcsysinit.d and replaced it with rcS.d.
+I've also removed the rcsysinit.d directory and replaced it with rcS.d.
 
 LSB Functions - The previous lfs-bootscripts sourced a functions file
 located at /etc/rc.d/init.d/functions.  This file has been renamed
